Corrected a typo in a PSO record name

--- a/automation1App/op/ui/autoconvert/Automation1PSO.ui
+++ b/automation1App/op/ui/autoconvert/Automation1PSO.ui
@@ -424,7 +424,7 @@ border-radius: 2px;
                 <enum>caLineEdit::WidthAndHeight</enum>
             </property>
             <property name="channel">
-                <string>$(P)$(R)PulseLenth</string>
+                <string>$(P)$(R)PulseLength</string>
             </property>
             <property name="foreground">
                 <color alpha="255">
